@@ -1226,14 +1226,22 @@ sub xst_replace_pump_iface_kw_not
 sub xst_replace_xml_pcdata
 {
   my ($file, $varpath, $data) = @_;
-  my ($model, $branch, $fd);
+  my ($model, $branch, $fd, $compressed);
 
-  $model  = &xst_xml_model_scan ($file);
+  ($model, $compressed) = &xst_xml_model_scan ($file);
   $branch = &xst_xml_model_ensure ($model, $varpath);
 
   &xst_xml_model_set_pcdata ($branch, $data);
 
-  $fd = &xst_file_open_write_from_names ($file);
+  if ($compressed == 1)
+  {
+    $fd = &xst_file_open_write_compressed ($file);
+  }
+  else
+  {
+    $fd = &xst_file_open_write_from_names ($file);
+  }
+
   if ($fd == -1) { return -1; }
 
   print $fd &xst_xml_model_print ($model);
@@ -1245,14 +1253,22 @@ sub xst_replace_xml_pcdata
 sub xst_replace_xml_attribute
 {
   my ($file, $varpath, $attr, $value) = @_;
-  my ($model, $branch, $fd);
+  my ($model, $branch, $fd, $compressed);
 
-  $model  = &xst_xml_model_scan ($file);
+  ($model, $compressed) = &xst_xml_model_scan ($file);
   $branch = &xst_xml_model_ensure ($model, $varpath);
 
   &xst_xml_model_set_attribute ($branch, $attr, $value);
 
-  $fd = &xst_file_open_write_from_names ($file);
+  if ($compressed == 1)
+  {
+    $fd = &xst_file_open_write_compressed ($file);
+  }
+  else
+  {
+    $fd = &xst_file_open_write_from_names ($file);
+  }
+
   if ($fd == -1) { return -1; }
 
   print $fd &xst_xml_model_print ($model);
